Update project name in package-lock and change title in resume.html for consistency

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Analyzer</title>
+    <title>ResuMatch</title>
     <style>
         * {
             margin: 0;
@@ -11,7 +11,7 @@
             box-sizing: border-box;
         }
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Poppins', 'Segoe UI', Tahoma, sans-serif;
             background: #f5f5f5;
             min-height: 100vh;
             padding: 20px;
@@ -209,9 +209,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>📄 Resume Analyzer</h1>
-        <p class="subtitle">Get AI-powered insights about skills and experience</p>
-
+        <h1>ResuMatch</h1>
+        <p class="subtitle">Find jobs that best match your skills!</p>
         <div class="input-section">
             <div class="input-group">
                 <h2>Upload PDF</h2>
