Remove emojis from header and file upload label for a cleaner interface

--- a/resume.html
+++ b/resume.html
@@ -209,7 +209,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎯 ResuMatch</h1>
+        <h1>ResuMatch</h1>
         <p class="subtitle">Find jobs that best match your skills!</p>
         
         <div class="input-section">
@@ -218,7 +218,7 @@
                 <div class="file-input-wrapper">
                     <input type="file" id="fileInput" accept=".pdf" />
                     <label for="fileInput" class="file-input-label">
-                        📁 Click to upload PDF or drag & drop
+                        Click to upload PDF or drag & drop
                     </label>
                     <div class="file-name" id="fileName"></div>
                 </div>
