--- a/resume.html
+++ b/resume.html
@@ -230,6 +230,15 @@
             </div>
         </div>
 
+        <div class="button-area">
+            <button id="uploadAnalyzeBtn">Upload & Analyze Resume</button>
+        </div>
+        <div class="results" id="analyzeResults">
+            <div id="analyzeErrorMsg" class="error" style="display: none;"></div>
+            <div id="analyzeLoadingMsg" class="loading" style="display: none;">Analyzing resume...</div>
+            <div id="analyzeContent" style="margin-top: 20px;"></div>
+        </div>
+
         <h2 style="font-size: 18px; color: #333; margin: 30px 0 20px 0; border-bottom: 2px solid #333; padding-bottom: 10px;">Job Preferences</h2>
 
         <div class="input-section">
@@ -452,6 +461,50 @@
             matchResults.classList.remove('show');
             matchErrorMsg.style.display = 'none';
             matchContent.innerHTML = '';
+        });
+
+        // --- Upload & Analyze Resume Button Logic ---
+        const uploadAnalyzeBtn = document.getElementById('uploadAnalyzeBtn');
+        const analyzeResults = document.getElementById('analyzeResults');
+        const analyzeLoadingMsg = document.getElementById('analyzeLoadingMsg');
+        const analyzeErrorMsg = document.getElementById('analyzeErrorMsg');
+        const analyzeContent = document.getElementById('analyzeContent');
+
+        uploadAnalyzeBtn.addEventListener('click', async () => {
+            const text = resumeText.value.trim();
+            if (!selectedFile && !text) {
+                analyzeErrorMsg.textContent = 'Please upload a PDF or paste resume text first';
+                analyzeErrorMsg.style.display = 'block';
+                analyzeResults.classList.add('show');
+                return;
+            }
+            analyzeResults.classList.add('show');
+            analyzeLoadingMsg.style.display = 'block';
+            analyzeErrorMsg.style.display = 'none';
+            analyzeContent.innerHTML = '';
+            try {
+                let resumeContent = text;
+                if (selectedFile) {
+                    resumeContent = await readPdfFile(selectedFile);
+                }
+                const res = await fetch('/api/analyze-resume', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ resumeContent }),
+                });
+                const data = await res.json();
+                analyzeLoadingMsg.style.display = 'none';
+                if (res.ok) {
+                    analyzeContent.innerHTML = `<div style='white-space: pre-wrap; color: #333;'><b>Resume Analysis:</b><br>${data.analysis}</div>`;
+                } else {
+                    analyzeErrorMsg.textContent = `Error: ${data.error}`;
+                    analyzeErrorMsg.style.display = 'block';
+                }
+            } catch (error) {
+                analyzeLoadingMsg.style.display = 'none';
+                analyzeErrorMsg.textContent = `Error: ${error.message}`;
+                analyzeErrorMsg.style.display = 'block';
+            }
         });
     </script>
 </body>
